# eval42-back

./: .gitignore  pyproject.toml
app/: main.py
