[tool.poetry]
name = "app"
version = "0.1.0"
description = "API server of Eval42"
authors = ["Sungwoo Park <codest99@gmail.com>"]

[tool.poetry.scripts]
dev = "app.main:dev"
prod = "app.main:prod"

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.12.3"
fastapi = "^0.62.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
